# ObjectTracking

./: DeepSORTTracker.py  carCountDeepSORT.py  detect_track.cpp  main.py  sort.py  yolo.cpp  yolo8_deepsort.py  yolov3EuclideanDistTracker.cpp
BoTSORT/: yolov8Botsort.py
ByteTrack/: CMakeLists.txt
ByteTrack/src/: main.cpp
BytetrackYolov8/: CMakeLists.txt
BytetrackYolov8/include/: inference.h
BytetrackYolov8/src/: inference.cpp  main.cpp
SORTtracking/: car_count.py  carcount2.py  people_count.py
YOLOV8Tracking/: yolo8-track2.py  yolov8-track.py  yolov8sort.py
byteTracking/: carCountByteTrack.py
byteTracking/yolox/tracker/: byte_tracker.py
deepSORTtracking/: DeepSORTTracker.py  carCountDeepSORT.py
